Removing the truncate module. Adding Adam's jsfiddle work for showing and hiding the description field. Removing the Session Detail controller, route, and template. Correcting the spelling of 'Lifehacks' and adding it back into the category filter.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -76,6 +76,31 @@ blockquote {
 
 .sessionDescription{
 	word-wrap: break-word;
+	line-height:1.2em;	
+}
+
+.collapsed {
+    line-height: 1em;
+    height: 2em;
+    overflow: hidden;
+}
+
+.toggle-collapsed input {
+    display: none;
+}
+
+/* Extra styles to add faux-ellipsis to multi-line text */
+.collapsed {
+    position:relative;
+}
+
+.collapsed::after {
+    content:'\2026';
+    display: block;
+    position:absolute;
+    bottom:0;
+    right:0;
+    background-color:#fff;
 }
 
 .label-success {
